syntax = "proto3";
package vpr.v1;

import "google/protobuf/empty.proto";

message HealthRes { bool ok = 1; string message = 2; }

message CreatePatientReq {
  string first_name = 1;
  string last_name = 2;
  string author_name = 3;
  string author_email = 4;
  string author_signature = 6;
  string national_id = 5;
}

message Patient {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string created_at = 4; // RFC3339
  string national_id = 5;
}

message CreatePatientRes {
  string filename = 1; // path of created JSON file
  Patient patient = 2;
}

message ListPatientsRes {
  repeated Patient patients = 1;
}

service VPR {
  rpc Health(google.protobuf.Empty) returns (HealthRes);
  rpc CreatePatient(CreatePatientReq) returns (CreatePatientRes);
  rpc ListPatients(google.protobuf.Empty) returns (ListPatientsRes);
}